src/ngt/williaminc/core/grammar/GrammarParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 C:\\Users\\Doorn\\workspace\\NGT\\src\\ngt\\williaminc\\core\\grammar\\Grammar.g 2010-04-14 20:36:17
 package ngt.williaminc.core.grammar; 

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

/**  Recognize and build trees for C-
 *   Results in CMinusParser.java, CMinusLexer.java,
 *   and the token definition file CMinus.tokens used by
 *   the tree grammar to ensure token types are the same.
 */
public class GrammarParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "VAR", "FUNC", "FCALL", "ARG", "SLIST", "ID", "INT", "WS", "'is'", "';'", "'nummer'", "'lijst'", "'('", "','", "')'", "'{'", "'}'", "'toon'", "'for'", "'='", "'=='", "'!='", "'+'", "'*'"
    };
    public static final int FCALL=6;
    public static final int T__27=27;
    public static final int T__26=26;
    public static final int T__25=25;
    public static final int T__24=24;
    public static final int T__23=23;
    public static final int T__22=22;
    public static final int T__21=21;
    public static final int T__20=20;
    public static final int INT=10;
    public static final int ID=9;
    public static final int EOF=-1;
    public static final int T__19=19;
    public static final int WS=11;
    public static final int T__16=16;
    public static final int T__15=15;
    public static final int ARG=7;
    public static final int T__18=18;
    public static final int T__17=17;
    public static final int T__12=12;
    public static final int T__14=14;
    public static final int FUNC=5;
    public static final int T__13=13;
    public static final int SLIST=8;
    public static final int VAR=4;

    // delegates
    // delegators


        public GrammarParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public GrammarParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return GrammarParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\Doorn\\workspace\\NGT\\src\\ngt\\williaminc\\core\\grammar\\Grammar.g"; }


    public static class program_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "program"
    // C:\\Users\\Doorn\\workspace\\NGT\\src\\ngt\\williaminc\\core\\grammar\\Grammar.g:26:1: program : ( declaration )+ ;
    public final GrammarParser.program_return program() throws RecognitionException {
        GrammarParser.program_return retval = new GrammarParser.program_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        GrammarParser.declaration_return declaration1 = null;



        try {
            // C:\\Users\\Doorn\\workspace\\NGT\\src\\ngt\\williaminc\\core\\grammar\\Grammar.g:27:5: ( ( declaration )+ )
            // C:\\Users\\Doorn\\workspace\\NGT\\src\\ngt\\williaminc\\core\\grammar\\Grammar.g:27:9: ( declaration )+
            {
            root_0 = (Object)adaptor.nil();

            // C:\\Users\\Doorn\\workspace\\NGT\\src\\ngt\\williaminc\\core\\grammar\\Grammar.g:27:9: ( declaration )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( ((LA1_0>=14 && LA1_0<=15)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // C:\\Users\\Doorn\\workspace\\NGT\\src\\ngt\\williaminc\\core\\grammar\\Grammar.g:27:9: declaration
            	    {
            	    pushFollow(FOLLOW_declaration_in_program86);
            	    declaration1=declaration();

            	    state._fsp--;

            	    adaptor.addChild(root_0, declaration1.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "program"

    public static class declaration_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "declaration"
    // C:\\Users\\Doorn\\workspace\\NGT\\src\\ngt\\williaminc\\core\\grammar\\Grammar.g:30:1: declaration : ( variable | function );
    public final GrammarParser.declaration_return declaration() throws RecognitionException {
        GrammarParser.declaration_return retval = new GrammarParser.declaration_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        GrammarParser.variable_return variable2 = null;

        GrammarParser.function_return function3 = null;



        try {
            // C:\\Users\\Doorn\\workspace\\NGT\\src\\ngt\\williaminc\\core\\grammar\\Grammar.g:31:5: ( variable | function )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( ((LA2_0>=14 && LA2_0<=15)) ) {
                int LA2_1 = input.LA(2);

                if ( (LA2_1==ID) ) {
                    int LA2_2 = input.LA(3);

                    if ( (LA2_2==12) ) {
                        alt2=1;
                    }
                    else if ( (LA2_2==16) ) {
                        alt2=2;
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 2, 2, input);

                        throw nvae;
                    }
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 1, input);

                    throw nvae;
                }
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }
            switch (alt2) {
                case 1 :
                    // C:\\Users\\Doorn\\workspace\\NGT\\src\\ngt\\williaminc\\core\\grammar\\Grammar.g:31:9: variable
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_variable_in_declaration106);
                    variable2=variable();

                    state._fsp--;

                    adaptor.addChild(root_0, variable2.getTree());

                    }
                    break;
                case 2 :
                    // C:\\Users\\Doorn\\workspace\\NGT\\src\\ngt\\williaminc\\core\\grammar\\Grammar.g:32:9: function
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_function_in_declaration116);
                    function3=function();

                    state._fsp--;

                    adaptor.addChild(root_0, function3.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "declaration"

    public static class variable_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "variable"
    // C:\\Users\\Doorn\\workspace\\NGT\\src\\ngt\\williaminc\\core\\grammar\\Grammar.g:35:1: variable : type ID 'is' expr ';' -> ^( VAR type ID expr ) ;
    public final GrammarParser.variable_return variable() throws RecognitionException {
        GrammarParser.variable_return retval = new GrammarParser.variable_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token ID5=null;
        Token string_literal6=null;
        Token char_literal8=null;
        GrammarParser.type_return type4 = null;

        GrammarParser.expr_return expr7 = null;


        Object ID5_tree=null;
        Object string_literal6_tree=null;
        Object char_literal8_tree=null;
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_13=new RewriteRuleTokenStream(adaptor,"token 13");
        RewriteRuleTokenStream stream_12=new RewriteRuleTokenStream(adaptor,"token 12");
        RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");
        RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");
        try {
            // C:\\Users\\Doorn\\workspace\\NGT\\src\\ngt\\williaminc\\core\\grammar\\Grammar.g:36:5: ( type ID 'is' expr ';' -> ^( VAR type ID expr ) )
            // C:\\Users\\Doorn\\workspace\\NGT\\src\\ngt\\williaminc\\core\\grammar\\Grammar.g:36:9: type ID 'is' expr ';'
            {
            pushFollow(FOLLOW_type_in_variable135);
            type4=type();

            state._fsp--;

            stream_type.add(type4.getTree());
            ID5=(Token)match(input,ID,FOLLOW_ID_in_variable137);  
            stream_ID.add(ID5);

            string_literal6=(Token)match(input,12,FOLLOW_12_in_variable139);  
            stream_12.add(string_literal6);

            pushFollow(FOLLOW_expr_in_variable141);
            expr7=expr();

            state._fsp--;

            stream_expr.add(expr7.getTree());
            char_literal8=(Token)match(input,13,FOLLOW_13_in_variable143);  
            stream_13.add(char_literal8);



            // AST REWRITE
            // elements: type, expr, ID
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 36:31: -> ^( VAR type ID expr )
            {
                // C:\\Users\\Doorn\\workspace\\NGT\\src\\ngt\\williaminc\\core\\grammar\\Grammar.g:36:34: ^( VAR type ID expr )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(VAR, "VAR"), root_1);

                adaptor.addChild(root_1, stream_type.nextTree());
                adaptor.addChild(root_1, stream_ID.nextNode());
                adaptor.addChild(root_1, stream_expr.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "variable"

    public static class type_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "type"
    // C:\\Users\\Doorn\\workspace\\NGT\\src\\ngt\\williaminc\\core\\grammar\\Grammar.g:39:1: type : ( 'nummer' | 'lijst' );
    public final GrammarParser.type_return type() throws RecognitionException {
        GrammarParser.type_return retval = new GrammarParser.type_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token set9=null;

        Object set9_tree=null;

        try {
            // C:\\Users\\Doorn\\workspace\\NGT\\src\\ngt\\williaminc\\core\\grammar\\Grammar.g:39:5: ( 'nummer' | 'lijst' )
            // C:\\Users\\Doorn\\workspace\\NGT\\src\\ngt\\williaminc\\core\\grammar\\Grammar.g:
            {
            root_0 = (Object)adaptor.nil();

            set9=(Token)input.LT(1);
            if ( (input.LA(1)>=14 && input.LA(1)<=15) ) {
                input.consume();
                adaptor.addChild(root_0, (Object)adaptor.create(set9));
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "type"

    public static class function_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "function"
    // C:\\Users\\Doorn\\workspace\\NGT\\src\\ngt\\williaminc\\core\\grammar\\Grammar.g:46:1: function : type ID '(' ( formalParameter ( ',' formalParameter )* )? ')' block -> ^( FUNC type ID ( formalParameter )* block ) ;
    public final GrammarParser.function_return function() throws RecognitionException {
        GrammarParser.function_return retval = new GrammarParser.function_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token ID11=null;
        Token char_literal12=null;
        Token char_literal14=null;
        Token char_literal16=null;
        GrammarParser.type_return type10 = null;

        GrammarParser.formalParameter_return formalParameter13 = null;

        GrammarParser.formalParameter_return formalParameter15 = null;

        GrammarParser.block_return block17 = null;


        Object ID11_tree=null;
        Object char_literal12_tree=null;
        Object char_literal14_tree=null;
        Object char_literal16_tree=null;
        RewriteRuleTokenStream stream_17=new RewriteRuleTokenStream(adaptor,"token 17");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_18=new RewriteRuleTokenStream(adaptor,"token 18");
        RewriteRuleTokenStream stream_16=new RewriteRuleTokenStream(adaptor,"token 16");
        RewriteRuleSubtreeStream stream_formalParameter=new RewriteRuleSubtreeStream(adaptor,"rule formalParameter");
        RewriteRuleSubtreeStream stream_block=new RewriteRuleSubtreeStream(adaptor,"rule block");
        RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");
        try {
            // C:\\Users\\Doorn\\workspace\\NGT\\src\\ngt\\williaminc\\core\\grammar\\Grammar.g:47:5: ( type ID '(' ( formalParameter ( ',' formalParameter )* )? ')' block -> ^( FUNC type ID ( formalParameter )* block ) )
            // C:\\Users\\Doorn\\workspace\\NGT\\src\\ngt\\williaminc\\core\\grammar\\Grammar.g:47:9: type ID '(' ( formalParameter ( ',' formalParameter )* )? ')' block
            {
            pushFollow(FOLLOW_type_in_function202);
            type10=type();

            state._fsp--;

            stream_type.add(type10.getTree());
            ID11=(Token)match(input,ID,FOLLOW_ID_in_function204);  
            stream_ID.add(ID11);

            char_literal12=(Token)match(input,16,FOLLOW_16_in_function214);  
            stream_16.add(char_literal12);

            // C:\\Users\\Doorn\\workspace\\NGT\\src\\ngt\\williaminc\\core\\grammar\\Grammar.g:48:13: ( formalParameter ( ',' formalParameter )* )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( ((LA4_0>=14 && LA4_0<=15)) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // C:\\Users\\Doorn\\workspace\\NGT\\src\\ngt\\williaminc\\core\\grammar\\Grammar.g:48:15: formalParameter ( ',' formalParameter )*
                    {
                    pushFollow(FOLLOW_formalParameter_in_function218);
                    formalParameter13=formalParameter();

                    state._fsp--;

                    stream_formalParameter.add(formalParameter13.getTree());
                    // C:\\Users\\Doorn\\workspace\\NGT\\src\\ngt\\williaminc\\core\\grammar\\Grammar.g:48:31: ( ',' formalParameter )*
                    loop3:
                    do {
                        int alt3=2;
                        int LA3_0 = input.LA(1);

                        if ( (LA3_0==17) ) {
                            alt3=1;
                        }


                        switch (alt3) {
                    	case 1 :
                    	    // C:\\Users\\Doorn\\workspace\\NGT\\src\\ngt\\williaminc\\core\\grammar\\Grammar.g:48:32: ',' formalParameter
                    	    {
                    	    char_literal14=(Token)match(input,17,FOLLOW_17_in_function221);  
                    	    stream_17.add(char_literal14);

                    	    pushFollow(FOLLOW_formalParameter_in_function223);
                    	    formalParameter15=formalParameter();

                    	    state._fsp--;

                    	    stream_formalParameter.add(formalParameter15.getTree());

                    	    }
                    	    break;

                    	default :
                    	    break loop3;
                        }
                    } while (true);


                    }
                    break;

            }

            char_literal16=(Token)match(input,18,FOLLOW_18_in_function231);  
            stream_18.add(char_literal16);

            pushFollow(FOLLOW_block_in_function241);
            block17=block();

            state._fsp--;

            stream_block.add(block17.getTree());


            // AST REWRITE
            // elements: type, block, ID, formalParameter
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 50:9: -> ^( FUNC type ID ( formalParameter )* block )
            {
                // C:\\Users\\Doorn\\workspace\\NGT\\src\\ngt\\williaminc\\core\\grammar\\Grammar.g:50:12: ^( FUNC type ID ( formalParameter )* block )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(FUNC, "FUNC"), root_1);

                adaptor.addChild(root_1, stream_type.nextTree());
                adaptor.addChild(root_1, stream_ID.nextNode());
                // C:\\Users\\Doorn\\workspace\\NGT\\src\\ngt\\williaminc\\core\\grammar\\Grammar.g:50:27: ( formalParameter )*
                while ( stream_formalParameter.hasNext() ) {
                    adaptor.addChild(root_1, stream_formalParameter.nextTree());

                }
                stream_formalParameter.reset();
                adaptor.addChild(root_1, stream_block.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "function"

    public static class formalParameter_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "formalParameter"
    // C:\\Users\\Doorn\\workspace\\NGT\\src\\ngt\\williaminc\\core\\grammar\\Grammar.g:53:1: formalParameter : type ID -> ^( ARG type ID ) ;
    public final GrammarParser.formalParameter_return formalParameter() throws RecognitionException {
        GrammarParser.formalParameter_return retval = new GrammarParser.formalParameter_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token ID19=null;
        GrammarParser.type_return type18 = null;


        Object ID19_tree=null;
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");
        try {
            // C:\\Users\\Doorn\\workspace\\NGT\\src\\ngt\\williaminc\\core\\grammar\\Grammar.g:54:5: ( type ID -> ^( ARG type ID ) )
            // C:\\Users\\Doorn\\workspace\\NGT\\src\\ngt\\williaminc\\core\\grammar\\Grammar.g:54:9: type ID
            {
            pushFollow(FOLLOW_type_in_formalParameter283);
            type18=type();

            state._fsp--;

            stream_type.add(type18.getTree());
            ID19=(Token)match(input,ID,FOLLOW_ID_in_formalParameter285);  
            stream_ID.add(ID19);



            // AST REWRITE
            // elements: type, ID
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 54:17: -> ^( ARG type ID )
            {
                // C:\\Users\\Doorn\\workspace\\NGT\\src\\ngt\\williaminc\\core\\grammar\\Grammar.g:54:20: ^( ARG type ID )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(ARG, "ARG"), root_1);

                adaptor.addChild(root_1, stream_type.nextTree());
                adaptor.addChild(root_1, stream_ID.nextNode());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "formalParameter"

    public static class block_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "block"
    // C:\\Users\\Doorn\\workspace\\NGT\\src\\ngt\\williaminc\\core\\grammar\\Grammar.g:60:1: block : lc= '{' ( variable )* ( stat )* '}' -> ^( SLIST[$lc,\"SLIST\"] ( variable )* ( stat )* ) ;
    public final GrammarParser.block_return block() throws RecognitionException {
        GrammarParser.block_return retval = new GrammarParser.block_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token lc=null;
        Token char_literal22=null;
        GrammarParser.variable_return variable20 = null;

        GrammarParser.stat_return stat21 = null;


        Object lc_tree=null;
        Object char_literal22_tree=null;
        RewriteRuleTokenStream stream_20=new RewriteRuleTokenStream(adaptor,"token 20");
        RewriteRuleTokenStream stream_19=new RewriteRuleTokenStream(adaptor,"token 19");
        RewriteRuleSubtreeStream stream_variable=new RewriteRuleSubtreeStream(adaptor,"rule variable");
        RewriteRuleSubtreeStream stream_stat=new RewriteRuleSubtreeStream(adaptor,"rule stat");
        try {
            // C:\\Users\\Doorn\\workspace\\NGT\\src\\ngt\\williaminc\\core\\grammar\\Grammar.g:61:5: (lc= '{' ( variable )* ( stat )* '}' -> ^( SLIST[$lc,\"SLIST\"] ( variable )* ( stat )* ) )
            // C:\\Users\\Doorn\\workspace\\NGT\\src\\ngt\\williaminc\\core\\grammar\\Grammar.g:61:9: lc= '{' ( variable )* ( stat )* '}'
            {
            lc=(Token)match(input,19,FOLLOW_19_in_block319);  
            stream_19.add(lc);

            // C:\\Users\\Doorn\\workspace\\NGT\\src\\ngt\\williaminc\\core\\grammar\\Grammar.g:61:16: ( variable )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( ((LA5_0>=14 && LA5_0<=15)) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // C:\\Users\\Doorn\\workspace\\NGT\\src\\ngt\\williaminc\\core\\grammar\\Grammar.g:61:16: variable
            	    {
            	    pushFollow(FOLLOW_variable_in_block321);
            	    variable20=variable();

            	    state._fsp--;

            	    stream_variable.add(variable20.getTree());

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);

            // C:\\Users\\Doorn\\workspace\\NGT\\src\\ngt\\williaminc\\core\\grammar\\Grammar.g:61:26: ( stat )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( ((LA6_0>=ID && LA6_0<=INT)||LA6_0==13||LA6_0==16||LA6_0==19||(LA6_0>=21 && LA6_0<=22)) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // C:\\Users\\Doorn\\workspace\\NGT\\src\\ngt\\williaminc\\core\\grammar\\Grammar.g:61:26: stat
            	    {
            	    pushFollow(FOLLOW_stat_in_block324);
            	    stat21=stat();

            	    state._fsp--;

            	    stream_stat.add(stat21.getTree());

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);

            char_literal22=(Token)match(input,20,FOLLOW_20_in_block327);  
            stream_20.add(char_literal22);



            // AST REWRITE
            // elements: stat, variable
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 62:9: -> ^( SLIST[$lc,\"SLIST\"] ( variable )* ( stat )* )
            {
                // C:\\Users\\Doorn\\workspace\\NGT\\src\\ngt\\williaminc\\core\\grammar\\Grammar.g:62:12: ^( SLIST[$lc,\"SLIST\"] ( variable )* ( stat )* )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(SLIST, lc, "SLIST"), root_1);

                // C:\\Users\\Doorn\\workspace\\NGT\\src\\ngt\\williaminc\\core\\grammar\\Grammar.g:62:33: ( variable )*
                while ( stream_variable.hasNext() ) {
                    adaptor.addChild(root_1, stream_variable.nextTree());

                }
                stream_variable.reset();
                // C:\\Users\\Doorn\\workspace\\NGT\\src\\ngt\\williaminc\\core\\grammar\\Grammar.g:62:43: ( stat )*
                while ( stream_stat.hasNext() ) {
                    adaptor.addChild(root_1, stream_stat.nextTree());

                }
                stream_stat.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "block"

    public static class stat_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "stat"
    // C:\\Users\\Doorn\\workspace\\NGT\\src\\ngt\\williaminc\\core\\grammar\\Grammar.g:65:1: stat : ( forStat | expr ';' | block | assignStat ';' | ';' | keywords );
    public final GrammarParser.stat_return stat() throws RecognitionException {
        GrammarParser.stat_return retval = new GrammarParser.stat_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal25=null;
        Token char_literal28=null;
        Token char_literal29=null;
        GrammarParser.forStat_return forStat23 = null;

        GrammarParser.expr_return expr24 = null;

        GrammarParser.block_return block26 = null;

        GrammarParser.assignStat_return assignStat27 = null;

        GrammarParser.keywords_return keywords30 = null;


        Object char_literal25_tree=null;
        Object char_literal28_tree=null;
        Object char_literal29_tree=null;

        try {
            // C:\\Users\\Doorn\\workspace\\NGT\\src\\ngt\\williaminc\\core\\grammar\\Grammar.g:65:5: ( forStat | expr ';' | block | assignStat ';' | ';' | keywords )
            int alt7=6;
            switch ( input.LA(1) ) {
            case 22:
                {
                alt7=1;
                }
                break;
            case INT:
            case 16:
                {
                alt7=2;
                }
                break;
            case ID:
                {
                int LA7_3 = input.LA(2);

                if ( (LA7_3==16) ) {
                    alt7=2;
                }
                else if ( (LA7_3==23) ) {
                    alt7=4;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 7, 3, input);

                    throw nvae;
                }
                }
                break;
            case 19:
                {
                alt7=3;
                }
                break;
            case 13:
                {
                alt7=5;
                }
                break;
            case 21:
                {
                alt7=6;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 7, 0, input);

                throw nvae;
            }

            switch (alt7) {
                case 1 :
                    // C:\\Users\\Doorn\\workspace\\NGT\\src\\ngt\\williaminc\\core\\grammar\\Grammar.g:65:7: forStat
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_forStat_in_stat360);
                    forStat23=forStat();

                    state._fsp--;

                    adaptor.addChild(root_0, forStat23.getTree());

                    }
                    break;
                case 2 :
                    // C:\\Users\\Doorn\\workspace\\NGT\\src\\ngt\\williaminc\\core\\grammar\\Grammar.g:66:7: expr ';'
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_expr_in_stat368);
                    expr24=expr();

                    state._fsp--;

                    adaptor.addChild(root_0, expr24.getTree());
                    char_literal25=(Token)match(input,13,FOLLOW_13_in_stat370); 

                    }
                    break;
                case 3 :
                    // C:\\Users\\Doorn\\workspace\\NGT\\src\\ngt\\williaminc\\core\\grammar\\Grammar.g:67:7: block
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_block_in_stat379);
                    block26=block();

                    state._fsp--;

                    adaptor.addChild(root_0, block26.getTree());
